--- a/assets/app/clients/client-list.component.html
+++ b/assets/app/clients/client-list.component.html
@@ -1,16 +1,36 @@
 <section>
 <div class="panel panel-primary">
     <div class="panel-body">
-        <row>
-            <p class="col-md-2">Rechercher par Numéro de Client: </p>
-            <input type="text" class="col-md-4">
-        </row>
+        <div class="col-md-8">
+            <label id="searchLabel" class="col-md-3 control-label" for="searchNumClient">Rechercher par Numéro de Client : </label>
+            <div class="input-group col-md-5">
+                <span class="input-group-addon" aria-hidden="true" id="searchNumClient"><span class="glyphicon glyphicon-search"></span></span>
+                <input type="text" class="form-control" placeholder="search">
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="widgets">
+                <span class="glyphicon glyphicon-plus size" aria-hidden="true"><a [routerLink]="['creer']">Créer</a></span>
+            </div>
+            <div class="widgets">
+                <span>Copie</span>
+            </div>
+            <div class="widgets">
+                <span class="glyphicon glyphicon-pencil size" aria-hidden="true">Modifier</span>
+            </div>
+            <div class="widgets">
+                <span class="glyphicon glyphicon-minus size" aria-hidden="true">Supprimer</span>
+            </div>
+            <div class="widgets">
+                <input id="specialSearch" type="text" class="form-control" placeholder="search">
+            </div>
+        </div>
     </div>
     <div class="panel-heading">
         <h3>{{titre}}</h3>
     </div>
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th>NO</th>
@@ -54,6 +74,14 @@
     </div>
 </div>
 </section>
+<div class="col-md-12 footer">
+    <div class="col-md-12 divFooter">
+        <button type="button" class="btn btn-primary">
+        <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+            Actualiser
+        </button>
+    </div>
+</div>
 
 
 
@@ -65,7 +93,6 @@
 <!--todo later: filter pipe numero client embed pipe -->
 
 <!-- bouton creer copie, modifier, supprim, search bar (WIDGET COMPONENT EMBED)-->
-<li role="presentation"><a [routerLink]="['creer']">Creer</a></li>
 
 
 <!-- liste (table tape html ici) 
