ngModel pour client

--- a/assets/app/clients/client-list.component.html
+++ b/assets/app/clients/client-list.component.html
@@ -13,7 +13,7 @@
                 <span class="glyphicon glyphicon-plus size" aria-hidden="true"><a [routerLink]="['creer']">Créer</a></span>
             </div>
             <div class="widgets">
-                <span>Copie</span>
+                <span class="glyphicon glyphicon-duplicate size" aria-hidden="true">Copie</span>
             </div>
             <div class="widgets">
                 <span class="glyphicon glyphicon-pencil size" aria-hidden="true">Modifier</span>
