--- a/public/js/app/clients/client-list.component.html
+++ b/public/js/app/clients/client-list.component.html
@@ -60,7 +60,7 @@
                     <td>{{client?.courriel}}</td>
                     <td>{{client?.adresse | capitalize}}</td>
                     <td>{{client?.ville | capitalize}}</td>
-                    <td>{{client?.codePostal | capitalize}}</td>
+                    <td>{{client?.codePostal }}</td>
                     <td>{{client?.telPrincipal}}</td>
                     <td>{{client?.fax}}</td>
                     <td>{{client?.creerPar | capitalize}}</td>
