--- a/public/js/app/clients/client-list.component.html
+++ b/public/js/app/clients/client-list.component.html
@@ -33,7 +33,7 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>NO</th>
+                    <th>CODE CLIENT</th>
                     <th>NO COMPTE</th>
                     <th>COMPAGNIE</th>
                     <th>PRÉNOM</th>
@@ -51,7 +51,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let client of clients; let i=index">
-                    <td>{{i + 1}}</td>
+                    <td>{{client?.noClient}}</td>
                     <td>{{client?.noCompte}}</td>
                     <td>{{client?.compagnie | capitalize}}</td>
                     <td>{{client?.prenom | capitalize}}</td>
